# japan-MOLLER

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  DEBUG_SETUP.md  DataFrame_Implementation_README.md  Dockerfile  Doxyfile  FINAL_RNTUPLE_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL  MOCK_DATA_VALIDATION_REPORT.md  PackageGroups.dox  QWSUBSYSTEMARRAY_CONDITIONAL_COMPILATION_COMPLETE.md  README.md  RNTUPLE_CONDITIONAL_COMPILATION.md  STATIC_ANALYSIS.md  TESTING.md  analyze_all_rntuples.C  analyze_data.py  blinder.map  burst_regalias_4.C  check_files.py  complete_rntuple_analysis.md  detailed_analysis.py  final_verification.C  hall_bcm_plots_rntuple_test.cfg  inspect_rntuples.py  qweak-config.in  qwparity.conf  regalias_4.C  rntuple_analysis_summary.md  rntuple_introduction.txt  root_rntuple_class_reference.txt  sample_data_values.C  setup_environment.sh  simple_examine.C
.devcontainer/: README.md  devcontainer.json  load-profile-extensions.sh  mount-cvmfs.sh  post-attach.sh  post-create.sh  setup-cvmfs.sh  setup-profile-extensions.sh  verify-setup.sh
.github/: asan-suppressions.txt  codespell.txt  copilot-instructions.md  lsan.supp  ubsan-suppressions.txt  ubsan.supp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/prompts/: compare-summaries.yml
.github/scripts/: generate_schema_diagram.py
.github/workflows/: benchmarks.yml  build-lcg-cvmfs.yml  build.yml  compare-artifacts.yml  documentation.yml  scheduled-run.yml  test-and-coverage.yml
Analysis/include/: Coda2EventDecoder.h  Coda3EventDecoder.h  MQwCodaControlEvent.h  MQwF1TDC.h  MQwHistograms.h  MQwMockable.h  MQwPublishable.h  MQwV775TDC.h  QwADC18_Channel.h  QwColor.h  QwConcepts.h  QwDBInterface.h  QwDatabase.h  QwEPICSEvent.h  QwEventBuffer.h  QwF1TDContainer.h  QwFactory.h  QwHistogramHelper.h  QwInterpolator.h  QwLog.h  QwMollerADC_Channel.h  QwObjectCounter.h  QwOmnivore.h  QwOptions.h  QwPMT_Channel.h  QwParameterFile.h  QwPromptSummary.h  QwPromptSummaryLinkDef.h  QwRNTupleFile.h  QwRint.h  QwRootFile.h  QwRootNTuple.h  QwRootTree.h  QwRootTreeBranchVector.h  QwRunCondition.h  QwSIS3320_Accumulator.h  QwSIS3320_LogicalAccumulator.h  QwSIS3320_Samples.h  QwScaler_Channel.h  QwSubsystemArray.h  (+11 more)
Analysis/main/: QwRoot.cc
Analysis/prminput/: EpicsTable.5275-.map  EpicsTable.5380-.map  EpicsTable.map  EpicsTableRTP.map
Analysis/src/: Coda2EventDecoder.cc  Coda3EventDecoder.cc  MQwCodaControlEvent.cc  MQwF1TDC.cc  MQwMockable.cc  MQwPublishable.cc  MQwV775TDC.cc  QwADC18_Channel.cc  QwDBInterface.cc  QwDatabase.cc  QwEPICSEvent.cc  QwEventBuffer.cc  QwF1TDContainer.cc  QwHistogramHelper.cc  QwLog.cc  QwMollerADC_Channel.cc  QwOmnivore.cc  QwOptions.cc  QwPMT_Channel.cc  QwParameterFile.cc  QwPromptSummary.cc  QwRNTupleFile.cc  QwRint.cc  QwRootFile.cc  QwRootNTuple.cc  QwRootTree.cc  QwRootTreeBranchVector.cc  QwRunCondition.cc  QwSIS3320_Accumulator.cc  QwTypes.cc  (+8 more)
Analysis/tests/: CMakeLists.txt
Analysis/tests/benchmarks/: benchmark_channel_arithmetic.cpp  benchmark_event_processing.cpp
Analysis/tests/integration/: test_event_processing_workflow.cpp
Analysis/tests/unit/: test_QwEventBuffer.cpp  test_QwMollerADC_Channel.cpp  test_QwPMT_Channel.cpp  test_QwScaler_Channel.cpp  test_QwSubsystemArray.cpp  test_VQwDataElement.cpp  test_VQwHardwareChannel.cpp  test_channel_arithmetic.cpp  test_factory_pattern.cpp
Doxygen/: database_schema.dox  groups.dox
Feedback/: CMakeLists.txt  FlipPCValues  GetGoodPC  SetLargeNegative_A_q  SetLargePositive_A_q  SetNominalPC
Guide/: Guide.md
MOLLER-analysis-plots-main/: hall_bcm_plots_rntuple_corrected.cfg  hall_bcm_rntuple_final.cfg
Parity/tests/: CMakeLists.txt
Parity/tests/benchmarks/: benchmark_parity_analysis.cpp
Parity/tests/integration/: test_helicity_pattern_analysis.cpp
Parity/tests/unit/: test_QwBCM.cpp  test_QwBPMStripline.cpp  test_QwBlinder.cpp  test_QwHelicity.cpp  test_combiner_functionality.cpp
SetupFiles/: .QwSetup.csh  .Qwbashrc  .Qwbashrc_scratch  .Qwcshrc  .Qwcshrc_scratch  checkrootversion  make_SET_ME_UP  make_scratch_dir  remove_from_paths.csh
Tests/: 002_setupfiles.sh  004_qwmockdatagenerator.ref  004_qwparity.ref  scannertest
cmake/: CMakeLists.txt  COVERAGE_README.md  CheckCoverage.cmake  CoverageConfig.cmake.in
docs/: artifact-comparison.md
evio/: CMakeLists.txt  EVIOConfig.cmake.in  Makefile  README
evio/include/: CustomAlloc.h  Helper.h  THaCodaData.h  THaCodaFile.h  THaCodaFileLinkDef.h  THaEtClient.h  THaEtClientLinkDef.h
evio/src/: THaCodaData.C  THaCodaFile.C  THaEtClient.C
macro/: #DoublePeak.C#  #FFT_DD.C#  #GetAllPedestals_Caryn_run3105.C#  #GetBCMPedestal_run3395_Caryn.C#  #GetBCMPedestal_run3751_Caryn.C#  #GetBCMPedestals_Caryn_run3395_pedsearch_60to70.C#  #PlotInjBPMS.C#  #feedbackmeasure2019.C#  AposVscan_run4231.C  AsymTime.C  AsymTime_edit.C  BCMAsym.C  DoublePeak.C  FFT.C  FFT_DD.C  FFT_Tree.C  GetAllPedestals_Caryn_run3098.C  GetAllPedestals_Caryn_run3105.C  GetAllPedestals_Caryn_run3106.C  GetAllPedestals_Caryn_run3138.C  GetAllPedestals_Caryn_run3424.C  GetAllPedestals_Caryn_run3424_pedsearch.C  GetAllPedestals_Caryn_run3424_pedsearch50uA.C  GetAllPedestals_Caryn_run3430.C  GetAllPedestals_Caryn_run3430_10to70.C  GetAllPedestals_Caryn_run3430_50uA.C  GetAllPedestals_Caryn_run3430_pedsearch.C  GetAllPedestals_Caryn_run3430_pedsearch45to55.C  GetAllPedestals_Caryn_run3597.C  GetAllPedestals_Caryn_run3597_dgds.C  GetAllPedestals_Caryn_run3645_dgds.C  GetAllPedestals_Caryn_run3751_ands.C  GetAllPedestals_Caryn_run3751_anus.C  GetAllPedestals_Caryn_run3751_dgds.C  GetAllPedestals_Caryn_run4229_dgds.C  GetAllPedestals_Caryn_run4309_dgds.C  GetAllPedestals_Caryn_run4610_dgds.C  GetAllPedestals_Caryn_run4650_dgds.C  GetAllPedestals_Caryn_run4652_dgds.C  GetAllPedestals_Caryn_run4806_dgds.C  (+88 more)
panguin/: CMakeLists.txt  README.md  panguin.cc
rntuple_checks/: analyze_all_rntuples.C  check_data_content.C  examine_rntuple.C  inspect_fields.C  simple_inspect.C
rootScripts/: BeamModExtractor.C  Open.C  plotCSV.C  plot_fft.C
scripts/: run_coverage.sh
(+451 files in other folders)
